@@ -4,6 +4,7 @@ Changes in 4.1:
 - Change from and to fields to always ensure that from is smaller then to in the bandwidth scheduler plugin (225951)
 - Show if a peer is using the µTP protocol or not 
 - Cleanup file dialog filters for torrents and make sure that files named torrent, are also seen by the filter (241259)
+- Improve performance of ViewModel when there are many torrents (216501)
 
 Changes in 4.0.2:
 - Fix wrong X-KDE-PluginInfo-Name in ktzeroconfplugin.desktop
